--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,120 @@
 /* CSS stillerinizi buraya girin */
+* {
+  font-family: "Playfair Display";
+  color: #344028;
+  margin: 0;
+  padding: 0;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 80%;
+}
+.name {
+  font-size: 45px;
+  padding: 30px 30px 40px;
+  font-family: "Dancing Script";
+}
+.header-style {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2px 5px 20px 40px;
+  background-color: #d4d8ce;
+}
+h1 {
+  font-family: "Dancing Script";
+  text-align: center;
+}
+
+nav a {
+  background-color: #8ba1a3;
+  color: #e8ede2;
+  margin: 0 0;
+  padding: 5px 10px;
+  width: 100px;
+  font-size: small;
+  flex-direction: row;
+  justify-content: flex-start;
+  text-align: center;
+  text-decoration: none;
+  border: 1px solid #344028;
+  border-radius: 10px;
+}
+nav a:hover {
+  background-color: #344028;
+}
+.adjust {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: #8ba1a3;
+}
+.adjust img {
+  width: 500px;
+  height: 300px;
+  margin: 10px 20px;
+  object-fit: cover;
+}
+.main-par {
+  text-align: center;
+  padding: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-par h1 {
+  font-family: "Playfair Display";
+}
+.main-par a {
+  background-color: #8ba1a3;
+  color: #e8ede2;
+  margin: 10px 0;
+  padding: 5px 10px;
+  width: 100px;
+  font-size: small;
+  flex-direction: row;
+  justify-content: flex-start;
+  text-align: center;
+  text-decoration: none;
+  border: 1px solid #344028;
+  border-radius: 10px;
+}
+.projects {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.projects img {
+  padding: 30px 20px;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  text-align: center;
+}
+.projects p {
+  text-align: center;
+}
+footer {
+  display: flex;
+  text-align: center;
+  background-color: #5c461f;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  padding: 10px 0;
+}
+footer p {
+  color: #d4d8ce;
+}
+footer a {
+  background-color: #d4d8ce;
+  color: rgb(31, 26, 26);
+  padding: 5px 10px;
+  margin: 10px 10px;
+  max-width: 150px;
+  border-radius: 10px;
+  text-decoration: none;
+}
