--- a/style/index.css
+++ b/style/index.css
@@ -5,22 +5,17 @@
   margin: 0;
   padding: 0;
 }
-.container {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  width: 80%;
-}
+
 .name {
-  font-size: 45px;
-  padding: 30px 30px 40px;
+  font-size: 2.5rem;
+  padding: 2rem 2rem 2.5rem;
   font-family: "Dancing Script";
 }
 .header-style {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 2px 5px 20px 40px;
+  padding: 0.2rem 0.5rem 1.5rem 2rem;
   background-color: #d4d8ce;
 }
 h1 {
@@ -32,66 +27,80 @@ nav a {
   background-color: #8ba1a3;
   color: #e8ede2;
   margin: 0 0;
-  padding: 5px 10px;
-  width: 100px;
-  font-size: small;
-  flex-direction: row;
-  justify-content: flex-start;
+  padding: 0.5rem 1rem;
+  font-size: 0.75rem;
   text-align: center;
   text-decoration: none;
-  border: 1px solid #344028;
+  border: 0.1rem solid #344028;
   border-radius: 10px;
 }
 nav a:hover {
   background-color: #344028;
+  transition: 0.5s ease;
 }
 .adjust {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: space-between;
   background-color: #8ba1a3;
 }
-.adjust img {
-  width: 500px;
-  height: 300px;
-  margin: 10px 20px;
+.main-img {
+  flex-basis: 50%;
+}
+.main-img img {
+  width: 90%;
+  margin: 1rem 1.5rem;
   object-fit: cover;
 }
 .main-par {
-  text-align: center;
-  padding: 50px 0;
+  padding: 3.5rem 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 50%;
 }
 .main-par h1 {
   font-family: "Playfair Display";
+  font-size: 2.5rem;
 }
 .main-par a {
   background-color: #8ba1a3;
   color: #e8ede2;
-  margin: 10px 0;
-  padding: 5px 10px;
-  width: 100px;
-  font-size: small;
+  margin: 1rem 0;
+  padding: 1rem 2rem;
+  width: 4rem;
+  font-size: 1rem;
   flex-direction: row;
-  justify-content: flex-start;
-  text-align: center;
   text-decoration: none;
-  border: 1px solid #344028;
+  border: 0.1rem solid #344028;
   border-radius: 10px;
+}
+.main-par a:hover {
+  background-color: #344028;
+  transition: 0.5s ease;
+}
+.main-par p {
+  font-size: 1rem;
 }
 .projects {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 0.5rem;
+  margin-top: 2.5rem;
 }
 .projects img {
-  padding: 30px 20px;
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  text-align: center;
+  object-position: center;
+}
+.project {
+  flex-basis: 20%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem 0.5rem;
+  align-items: center;
 }
 .projects p {
   text-align: center;
@@ -103,8 +112,8 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 20px 0;
-  padding: 10px 0;
+  margin: 1.5rem 0;
+  padding: 1rem 0;
 }
 footer p {
   color: #d4d8ce;
@@ -112,9 +121,80 @@ footer p {
 footer a {
   background-color: #d4d8ce;
   color: rgb(31, 26, 26);
-  padding: 5px 10px;
-  margin: 10px 10px;
-  max-width: 150px;
+  padding: 0.5rem 1rem;
+  margin: 1rem 1rem;
   border-radius: 10px;
   text-decoration: none;
+}
+footer a:hover {
+  background-color: rgb(0, 0, 0);
+  color: #d4d8ce;
+  transition: 0.5s ease;
+}
+@media screen and (max-width: 800px) {
+  .header-style {
+    display: flex;
+    flex-direction: row;
+    padding: 0.2rem 0.5rem 1.5rem 2rem;
+    background-color: #d4d8ce;
+  }
+}
+@media screen and (max-width: 800px) {
+  header {
+    display: flex;
+    justify-content: center;
+  }
+  .header-style {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+  nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 0 1rem;
+  }
+  .name {
+    padding: 1rem;
+  }
+  .adjust {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+  }
+  .main-par {
+    text-align: center;
+    padding: 2rem 2rem;
+    width: 90%;
+    align-items: center;
+  }
+  .main-par {
+    text-align: left;
+  }
+  .project {
+    flex-basis: 40%;
+    gap: 0.2rem 0.2rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  .name {
+    font-size: 1.5rem;
+    padding: 1rem 1rem 1.5rem;
+  }
+  .main-par {
+    text-align: center;
+    padding: 1rem 1rem;
+  }
+  .main-par {
+    padding: 2rem 1rem;
+    width: 95%;
+  }
+  footer {
+    font-size: 0.75rem;
+    margin: 0.5rem 0;
+    padding: 0.5rem 0;
+  }
 }
